# axum_blog

./: .dockerignore  .env  Cargo.toml  Dockerfile  client.http  docker-compose.yml  docker-entrypoint.sh  rustfmt.toml
migrations/: 0001_users_table.up.sql  0002_players_table.up.sql
src/: db.rs  main.rs
src/models/: mod.rs  player.rs  user.rs
src/routemount/: route.rs
src/routes/: player.rs  user.rs
src/utils/: errorhandler.rs  jwt.rs  mod.rs
