[package]
name = "axum_blog"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
dotenvy = "0.15"
