[package]
name = "axum_blog"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

axum-extra = { version = "0.9", features = ["typed-header"] }

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
dotenvy = "0.15"

bcrypt = "0.15"
jsonwebtoken = "8"

chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0.17"
